--- a/_footer.scss
+++ b/_footer.scss
@@ -1,62 +1,76 @@
+// Footer Section
 footer {
-    height: 217px;
-    width: 100%;
     background: $primary;
-    padding: 0 28px;
+  
     .social_link {
+      display: flex;
+      justify-content: center;
+  
+      .sm_container {
+        width: 34px;
+        height: 34px;
+        border-radius: 3px;
+        background: $lime;
         display: flex;
         justify-content: center;
-        .sm_container {
-            width: 34px;
-            height: 34px;
-            border-radius: 3px;
-            background: $lime;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 39px 26px 13px;
-            img {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
+        align-items: center;
+        margin: 50px 20px 10px;
+  
+        img {
+          display: flex;
+          justify-content: center;
+          align-items: center;
         }
+      }
     }
+  
     .nav_links {
+      display: flex;
+      justify-content: center;
+      margin-top: 25px;
+  
+      ul {
+        list-style: none;
         display: flex;
-        justify-content: center;
-        padding: 34px 0 0;
-        ul {
-            list-style: none;
-            display: flex;
-            li {
-                a {
-                    text-decoration: none;
-                    color: $text;
-                    width: 62px;
-                    height: 20px;
-                    font-family: 'Montserrat';
-                    font-style: normal;
-                    font-weight: 400;
-                    font-size: 14px;
-                    line-height: 20px;
-                    letter-spacing: 0.01em;
-                    margin: 13px 15px;
-                }
-            }
+        padding: 0;
+  
+        li {
+          a {
+            text-decoration: none;
+            color: $text;
+            width: 62px;
+            height: 20px;
+            font-family: "Montserrat";
+            font-style: normal;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 20px;
+            letter-spacing: 0.01em;
+            margin: 13px 15px;
+          }
+          .first_link {
+            margin-left: 0;
+          }
+          .last_link {
+            margin-right: 0;
+          }
         }
+      }
     }
+  
     .copyright {
-        font-family: 'Montserrat';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 20px;
-        color: $text;
-        text-align: center;
-        padding: 34px 0 0;
-        span {
-            color: $lime;
-        }
+      font-family: "Montserrat";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 20px;
+      color: $text;
+      text-align: center;
+      padding: 10px;
+  
+      span {
+        color: $lime;
+      }
     }
-}
+  }
+  
