--- a/event.css
+++ b/event.css
@@ -377,10 +377,7 @@ body {
   }
 }
 footer {
-  height: 217px;
-  width: 100%;
   background: #25262A;
-  padding: 0 28px;
 }
 footer .social_link {
   display: flex;
@@ -394,7 +391,7 @@ footer .social_link .sm_container {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 39px 26px 13px;
+  margin: 50px 20px 10px;
 }
 footer .social_link .sm_container img {
   display: flex;
@@ -404,11 +401,12 @@ footer .social_link .sm_container img {
 footer .nav_links {
   display: flex;
   justify-content: center;
-  padding: 34px 0 0;
+  margin-top: 25px;
 }
 footer .nav_links ul {
   list-style: none;
   display: flex;
+  padding: 0;
 }
 footer .nav_links ul li a {
   text-decoration: none;
@@ -418,10 +416,16 @@ footer .nav_links ul li a {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 20px;
   letter-spacing: 0.01em;
   margin: 13px 15px;
+}
+footer .nav_links ul li .first_link {
+  margin-left: 0;
+}
+footer .nav_links ul li .last_link {
+  margin-right: 0;
 }
 footer .copyright {
   font-family: "Montserrat";
@@ -431,7 +435,7 @@ footer .copyright {
   line-height: 20px;
   color: #A2A4A3;
   text-align: center;
-  padding: 34px 0 0;
+  padding: 10px;
 }
 footer .copyright span {
   color: #65F3AC;
