--- a/event.css
+++ b/event.css
@@ -276,6 +276,7 @@ body {
   font-weight: 600;
   justify-content: space-evenly;
   padding: 30px 10%;
+  height: 100%;
   width: 100%;
 }
 .card:hover {
@@ -285,23 +286,24 @@ body {
 .card .card-img-cover {
   height: 200px;
   width: 100%;
-  background-color: #A2A4A3;
+  background-color: #3e3e3e;
   border-radius: 5px;
 }
 .card .card-img-cover img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  -o-object-fit: contain;
+     object-fit: contain;
   border-radius: 5px;
 }
 .card .event-content {
-  margin: 25px auto;
+  margin: 25px 0;
   margin-bottom: 0;
 }
 .card .event-content h3 {
   font-size: 1.25rem;
   font-weight: 700;
+  display: inline;
   margin: 0;
   position: relative;
 }
@@ -309,7 +311,8 @@ body {
   position: absolute;
   content: " ";
   height: 3px;
-  width: 30%;
+  width: 50%;
+  border-radius: 5px;
   background-color: #65F3AC;
   bottom: -5px;
   left: 0;
