--- a/event.scss
+++ b/event.scss
@@ -18,6 +18,7 @@ body {
         content: " ";
         height: $height;
         width: $width;
+        border-radius: 5px;
         background-color: $lime;
         bottom: -5px;
         left: 0;
@@ -313,6 +314,7 @@ body {
     font-weight: 600;
     justify-content: space-evenly;
     padding: 30px 10%;
+    height: 100%;
     width: 100%;
     &:hover {
         transition: all 0.5s ease;
@@ -321,23 +323,24 @@ body {
     .card-img-cover {
         height: 200px;
         width: 100%;
-        background-color: $text;
+        background-color: #3e3e3e;
         border-radius: 5px;
         img {
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: contain;
             border-radius: 5px;
         }
     }
     .event-content {
-        margin: 25px auto;
+        margin: 25px 0;
         margin-bottom: 0;
         h3 {
             font-size: 1.25rem;
             font-weight: 700;
+            display: inline;
             margin: 0;
-            @include underline(30%, 3px);
+            @include underline(50%, 3px);
         }
         p {
             font-size: 1rem;
