--- a/team.css
+++ b/team.css
@@ -76,11 +76,11 @@ body {
   padding: 25px 20px;
   margin-bottom: 0;
   width: 100%;
-  transition: transform 0.1s ease-out;
+  transition: transform 0.1s ease-in-out;
 }
 
 .card:hover {
-  transition: all 2s ease;
+  transition: all 0.4s ease;
   transform: scale(1.03);
   box-shadow: -0.5px -0.5px 0.5px rgba(255, 255, 255, 0.25), 5px 5px 20px rgba(255, 255, 255, 0.1);
 }
