--- a/_footer.scss
+++ b/_footer.scss
@@ -1,5 +1,8 @@
 // Footer Section
 footer {
+    position: sticky;
+    width: 100%;
+    max-width: 100%;
     background: $primary;
   
     .social_link {
