--- a/event.css
+++ b/event.css
@@ -380,6 +380,10 @@ body {
   }
 }
 footer {
+  position: -webkit-sticky;
+  position: sticky;
+  width: 100%;
+  max-width: 100%;
   background: #25262A;
 }
 footer .social_link {
