--- a/style.scss
+++ b/style.scss
@@ -16,7 +16,7 @@ $text: #a2a4a3;
 $primary: #25262a;
 $secondary: #2d2f33;
 $input: #2f3335;
-
+$error: #e05a5a;
 // Scrollbar styling
 ::-webkit-scrollbar {
   width: 8px;
@@ -630,6 +630,13 @@ $input: #2f3335;
     }
     .submit {
       margin: 30px auto 0;
+    }
+
+    .input-error {
+      font-size: 14px;
+      color: $error;
+      display: block;
+      margin-top: 10px;
     }
   }
 }
