--- a/team.css
+++ b/team.css
@@ -60,27 +60,21 @@ body {
 }
 
 .card {
-  border-radius: 10px;
-  background: linear-gradient(#2D2F33, #2D2F33) padding-box, linear-gradient(135deg, grey, #2D2F33) border-box;
-  border-radius: 10px;
-  border: 2px solid transparent;
-  -webkit-backdrop-filter: blur(10px);
-          backdrop-filter: blur(10px);
-  color: white;
   display: flex;
   flex-direction: column;
-  font-family: Montserrat;
-  font-size: 20px;
-  font-weight: 600;
-  justify-content: space-evenly;
-  padding: 25px 20px;
-  margin-bottom: 0;
-  width: 100%;
-  transition: transform 0.1s ease-out;
+  justify-content: center;
+  height: auto;
+  padding: 30px;
+  background-color: #2D2F33;
+  border-radius: 5px;
+  transition: all 0.1s ease;
+  cursor: pointer;
+  border-radius: 10px;
+
 }
 
 .card:hover {
-  transition: all 2s ease;
+  transition: all 0.1s ease;
   transform: scale(1.03);
   box-shadow: -0.5px -0.5px 0.5px rgba(255, 255, 255, 0.25), 5px 5px 20px rgba(255, 255, 255, 0.1);
 }
@@ -90,7 +84,11 @@ body {
 }
 
 .card-img {
+  height: 15rem;
+  width: 15rem;
+  max-height: 16rem;
   width: 100%;
+  height: 100%;
   display: block;
   margin: 0 auto 20px;
   border-radius: 5px;
@@ -119,6 +117,43 @@ body {
   transition: transform 0.1s;
 }
 
+
+/* preloader */
+#preloader
+{
+background:rgb(255, 255, 255) url(./Images/tinywow_WhatsApp\ Video\ 2022-12-12\ at\ 11.11.14\ PM_9611337.webp) no-repeat center center;
+position: fixed;
+background-size:100%;
+height: 100%;
+width: 100%;
+z-index: 100;
+animation-name: fade;
+}
+
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 0s;
+  animation-name: fade;
+  animation-duration: 0s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: 0}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: 0}
+  to {opacity: 1}
+}
+
+/* ------ */
+
+
+
+
 /* large phone view :) */
 @media screen and (min-width: 600px) {
   .card-container {
@@ -137,6 +172,7 @@ body {
   .team-area {
     padding: 0 100px 50px;
   }
+ 
 }
 @media screen and (min-width: 1024px) {
   .card-container {
