--- a/style.css
+++ b/style.css
@@ -6,18 +6,6 @@
   box-sizing: border-box;
 }
 
-/* preloader */
-#preloader
-{
-background:rgb(255, 255, 255) url(./Images/loader.gif) no-repeat center center;
-position: fixed;
-background-size:100%;
-height: 100vh;
-width: 100%;
-z-index: 100;
-animation-name: fade;
-}
-
 ::-webkit-scrollbar {
   width: 8px;
 }
@@ -314,6 +302,41 @@ animation-name: fade;
   box-shadow: none;
 }
 
+#preloader {
+  background: rgb(255, 255, 255) url(./Images/loader.gif) no-repeat center center;
+  position: fixed;
+  background-size: 100%;
+  height: 100vh;
+  width: 100%;
+  z-index: 100;
+  -webkit-animation-name: fade;
+          animation-name: fade;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 3s;
+  animation-name: fade;
+  animation-duration: 3s;
+}
+
+@-webkit-keyframes fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 .navbar .navbar-nav .nav-link {
   color: #fff;
 }
