--- a/team.css
+++ b/team.css
@@ -48,6 +48,112 @@ body {
   color: #65F3AC !important;
 }
 
+.loader-parent {
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  width: 100vw;
+  z-index: 100;
+  background-color: #2D2F33;
+}
+
+.lds-ellipsis {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+
+.lds-ellipsis div {
+  position: absolute;
+  top: 33px;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  background: #65F3AC;
+  -webkit-animation-timing-function: cubic-bezier(0, 1, 1, 0);
+          animation-timing-function: cubic-bezier(0, 1, 1, 0);
+}
+
+.lds-ellipsis div:nth-child(1) {
+  left: 8px;
+  -webkit-animation: lds-ellipsis1 0.6s infinite;
+          animation: lds-ellipsis1 0.6s infinite;
+}
+
+.lds-ellipsis div:nth-child(2) {
+  left: 8px;
+  -webkit-animation: lds-ellipsis2 0.6s infinite;
+          animation: lds-ellipsis2 0.6s infinite;
+}
+
+.lds-ellipsis div:nth-child(3) {
+  left: 32px;
+  -webkit-animation: lds-ellipsis2 0.6s infinite;
+          animation: lds-ellipsis2 0.6s infinite;
+}
+
+.lds-ellipsis div:nth-child(4) {
+  left: 56px;
+  -webkit-animation: lds-ellipsis3 0.6s infinite;
+          animation: lds-ellipsis3 0.6s infinite;
+}
+
+@-webkit-keyframes lds-ellipsis1 {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes lds-ellipsis1 {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@-webkit-keyframes lds-ellipsis3 {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@keyframes lds-ellipsis3 {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@-webkit-keyframes lds-ellipsis2 {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(24px, 0);
+  }
+}
+@keyframes lds-ellipsis2 {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(24px, 0);
+  }
+}
 .team-area {
   padding: 0 50px 50px;
 }
@@ -60,21 +166,30 @@ body {
 }
 
 .card {
+  border-radius: 10px;
+  background: linear-gradient(#2D2F33, #2D2F33) padding-box, linear-gradient(135deg, grey, #2D2F33) border-box;
+  border-radius: 10px;
+  border: 2px solid transparent;
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  color: white;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  font-family: Montserrat;
+  font-size: 20px;
+  font-weight: 600;
+  justify-content: space-evenly;
+  padding: 25px 20px;
+  margin-bottom: 0;
+  width: 100%;
+  transition: transform 0.1s ease-out;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: auto;
-  padding: 30px;
-  background-color: #2D2F33;
-  border-radius: 5px;
-  transition: all 0.1s ease;
-  cursor: pointer;
-  border-radius: 10px;
-
 }
 
 .card:hover {
-  transition: all 0.1s ease;
+  transition: all 2s ease;
   transform: scale(1.03);
   box-shadow: -0.5px -0.5px 0.5px rgba(255, 255, 255, 0.25), 5px 5px 20px rgba(255, 255, 255, 0.1);
 }
@@ -84,11 +199,7 @@ body {
 }
 
 .card-img {
-  height: 15rem;
-  width: 15rem;
-  max-height: 16rem;
   width: 100%;
-  height: 100%;
   display: block;
   margin: 0 auto 20px;
   border-radius: 5px;
@@ -117,43 +228,6 @@ body {
   transition: transform 0.1s;
 }
 
-
-/* preloader */
-#preloader
-{
-background:rgb(255, 255, 255) url(./Images/tinywow_WhatsApp\ Video\ 2022-12-12\ at\ 11.11.14\ PM_9611337.webp) no-repeat center center;
-position: fixed;
-background-size:100%;
-height: 100%;
-width: 100%;
-z-index: 100;
-animation-name: fade;
-}
-
-
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 0s;
-  animation-name: fade;
-  animation-duration: 0s;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: 0}
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: 0}
-  to {opacity: 1}
-}
-
-/* ------ */
-
-
-
-
 /* large phone view :) */
 @media screen and (min-width: 600px) {
   .card-container {
@@ -172,7 +246,6 @@ animation-name: fade;
   .team-area {
     padding: 0 100px 50px;
   }
- 
 }
 @media screen and (min-width: 1024px) {
   .card-container {
