--- a/team.scss
+++ b/team.scss
@@ -9,6 +9,7 @@
      background-color: #2D2F33;
   }
   
+ 
   .sub-nav {
      display: flex;
      color: white;
@@ -52,6 +53,78 @@
   }
 
   
+// Loader
+.loader-parent{
+   display: block;
+   position: fixed;
+   left:0;
+   top:0;
+   height: 100vh;
+   width:100vw;
+   z-index: 100;
+   background-color: #2D2F33;
+}
+.lds-ellipsis {
+   position: absolute;
+   top:50%;
+   left:50%;
+   transform: translate(-50%,-50%);
+   display: inline-block;
+   position: relative;
+   width: 80px;
+   height: 80px;
+ }
+ .lds-ellipsis div {
+   position: absolute;
+   top: 33px;
+   width: 13px;
+   height: 13px;
+   border-radius: 50%;
+   background: #65F3AC;
+   animation-timing-function: cubic-bezier(0, 1, 1, 0);
+ }
+ .lds-ellipsis div:nth-child(1) {
+   left: 8px;
+   animation: lds-ellipsis1 0.6s infinite;
+ }
+ .lds-ellipsis div:nth-child(2) {
+   left: 8px;
+   animation: lds-ellipsis2 0.6s infinite;
+ }
+ .lds-ellipsis div:nth-child(3) {
+   left: 32px;
+   animation: lds-ellipsis2 0.6s infinite;
+ }
+ .lds-ellipsis div:nth-child(4) {
+   left: 56px;
+   animation: lds-ellipsis3 0.6s infinite;
+ }
+ @keyframes lds-ellipsis1 {
+   0% {
+     transform: scale(0);
+   }
+   100% {
+     transform: scale(1);
+   }
+ }
+ @keyframes lds-ellipsis3 {
+   0% {
+     transform: scale(1);
+   }
+   100% {
+     transform: scale(0);
+   }
+ }
+ @keyframes lds-ellipsis2 {
+   0% {
+     transform: translate(0, 0);
+   }
+   100% {
+     transform: translate(24px, 0);
+   }
+ }
+ 
+
   .team-area{
     padding:0 50px 50px;
   }
@@ -79,6 +152,8 @@
      margin-bottom: 0;
      width: 100%;
      transition: transform .1s ease-out;
+     object-fit: cover;
+     height: auto;
   }
   
   .card:hover {
