--- a/style.css
+++ b/style.css
@@ -406,6 +406,12 @@
   width: 100%;
   background-color: #2f3335;
 }
+.card .card-img img {
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  background-position: center center;
+}
 .card .card-content {
   margin: 15px 0 0;
 }
@@ -548,9 +554,6 @@
   background-color: #65f3ac;
   border-radius: 12px;
   margin: 11px auto 42px;
-}
-.our_club .card-img {
-  min-height: 250px;
 }
 
 .what_we_do {
